Solve hw-3
