# configs/openapi.yaml
@@ -182,6 +182,46 @@ paths:
         "500":
           description: Ошибка на стороне сервера
 
+  /posts/add:
+    post:
+      summary: Публикация поста
+      description: Публикует пост от имени пользователя
+      security:
+        - cookieAuth: [ ]
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                is_private:
+                  type: boolean
+                  example: false
+                title:
+                  type: string
+                  example: "New post"
+                tags:
+                  type: array
+                  items:
+                    type: string
+                  example: ["tag 1", "tag 2", "tag 3"]
+                text:
+                  type: string
+                  format: email
+                  example: "some very interesting text"
+      responses:
+        "200":
+          description: Пост успешно опубликован
+        "400":
+          description: JWT-токен отсутствует или невалиден, неверные данные профиля
+        "401":
+          description: JWT-токен невалиден
+        "403":
+          description: Доступ запрещен
+        "500":
+          description: Ошибка на стороне сервера
+
 components:
   securitySchemes:
     cookieAuth:
